[package]
name = "mhusd_site_monitor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rand = "0.8.5"
surge-ping = "0.8.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.0"
tokio = {version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "sync"]}
vizia = {git = "https://github.com/vizia/vizia"}

#  Changelog
#  
#  04/04/24 -- v0.1.0 -  Initial Release
#  04/05/24 -- v0.1.1 -  Timer counts down instead of up. 
#  04/05/24 -- v0.1.2 -  Ping function now supports variably sized payload.  