[package]
name = "mhusd_site_monitor"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
rand = "0.8.5"
surge-ping = "0.8.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.0"
tokio = {version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "sync"]}
vizia = {git = "https://github.com/vizia/vizia"}

#  Changelog
#  
#  04/04/24 -- v0.1.0 -  Initial Release
#  04/05/24 -- v0.1.1 -  Timer counts down instead of up. 
#  04/05/24 -- v0.1.2 -  Ping function now supports variably sized payload.  
#  04/05/24 -- v0.1.3 -  Added CSS selectors for stylesheet, text changes, ping on startup.  
#  04/05/24 -- v0.1.4 -  Eliminated console window on startup.  
#  04/05/24 -- v0.1.5 -  Added conditional CSS selector for ping errors. 
#  04/05/24 -- v0.1.6 -  Removed unnecessary flexbox. 
#  04/08/24 -- v0.1.7 -  CSS Stylesheet added, removed code that could be handled by CSS.  
#  04/09/24 -- v0.1.8 -  CSS style fixes.  
#  04/09/24 -- v0.2.0 -  Building the menu.  Added variable timer duration and refresh now. 
#  04/09/24 -- v0.2.1 -  CSS + Cosmetic changes.
#  04/10/24 -- v0.2.2 -  Cosmetic change.  
#  04/10/24 -- v0.3.0 -  Added the ability to hot reload sites.json.  
#  04/10/24 -- v0.3.1 -  Fixed some comments. 
#  04/11/24 -- v0.3.2 -  Refactored code. 
#  04/11/24 -- v0.3.3 -  More refactoring. 
#  04/15/24 -- v0.3.4 -  Added time stamp for last refresh.  
#  04/17/24 -- v0.3.5 -  Changed PingResponse to hold Duration instead of String
#  04/18/24 -- v0.4.0 -  Can now enable average (mean) view.  
#  04/22/24 -- v0.4.1 -  Eliminated memory leak.  
#  04/22/24 -- v0.5.0 -  Added configurable payload size.  